# NistChemPy

./: .buildinfo  .gitignore  LICENSE.md  MANIFEST.in  README.md  genindex.html  index.html  nist.py  nistchempy.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tutorial.ipynb
.github/workflows/: documentation.yml
_sources/: index.rst.txt
_sources/source/: advanced_search.ipynb.txt  api.rst.txt  basic_search.ipynb.txt  changelog.rst.txt  compound_properties.ipynb.txt  requests_config.ipynb.txt  structure_search.ipynb.txt
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  basic_search.ipynb  changelog.rst  compound_properties.ipynb  requests_config.ipynb  tutorial.ipynb
nist_map/: get_all_compounds.py  get_compounds_info.py  get_compounds_list.py
nistchempy/: __init__.py  compound.py  compound_data.py  compound_list.py  data_structs.py  nistchempy.py  parsing.py  requests.py  search.py
source/: advanced_search.html  advanced_search.ipynb  api.html  basic_search.html  changelog.html  compound_properties.html  requests_config.html  requests_config.ipynb  structure_search.html
src/nistchempy/: __init__.py  compound.py  compound_list.py  parsing.py  requests.py  search.py  utils.py
src/nistchempy/parsing/: __init__.py  compound.py  gas_chromatography.py
tests/: test_compound.py  test_data.py  test_parsing.py  test_request_config.py  test_requests.py  test_search.py
update/: 0_get_compounds_via_formula.py  1_get_compounds_via_formula.py  2_get_compounds_via_sitemaps.py  3_check_compound_initialization.py  3_get_compound_htmls.py  4_check_compound_initialization.py  5_get_compounds_from_refs.py  5_process_nonload_errors.py  6_extract_info_from_htmls.py  7_extract_info_from_htmls.py  8_get_compounds_via_formula.py  README.md  check_compound_initialization.py  extract_info_from_htmls.py  get_compound_htmls.py  get_missing_stereoisomers.py  get_nist_compounds.py  get_old_IDs.py  requirements.txt  update_data.py
