[metadata]
name = NistChemPy
version = 0.1
author = Ivan Chernyshov
author_email = ivan.chernyshoff@gmail.com
description = A simple Python wrapper around the NIST Chemistry WebBook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EPiCs-group/NistChemPy
project_urls =
    Bug Tracker = https://github.com/EPiCs-group/NistChemPy/issues
keywords = nist python api chemistry cheminformatics
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet

[options]
py_modules = nistchempy
install_requires =
    urllib
    requests
    beautifulsoup4
python_requires = >=3.6
