[metadata]
name = NistChemPy
version = 0.3.0
author = Ivan Chernyshov
author_email = ivan.chernyshoff@gmail.com
description = A simple Python wrapper around the NIST Chemistry WebBook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IvanChernyshov/NistChemPy
project_urls =
    Bug Tracker = https://github.com/IvanChernyshov/NistChemPy/issues
keywords = nist python api chemistry cheminformatics
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet

[options]
zip_safe = False
include_package_data = True
packages =
    nistchempy
install_requires =
    importlib-resources>=1.1.0; python_version < '3.9'
    requests
    beautifulsoup4
    pandas
python_requires = >=3.7

[options.package_data]
* = *.zip
